--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,6 +37,9 @@
 .br-desktop {
     display: none;
 }
+#br-desktop1 {
+    display: none;
+}
 
 /* Home */
 
@@ -1029,6 +1032,134 @@ header {
     opacity: 0.5;
 }
 /* Container5 End */
+
+/* footer */
+footer {
+    width: calc(430 / 430 * 100vw);
+    height: 586px;
+    background-color: #0b1831;
+    border-radius: 30px 30px 0px 0px;
+    overflow: hidden;
+}
+
+.footer-logo-svg {
+    width: calc(127 / 430 * 100vw);
+    height: 25.657px;
+    top: 71px;
+    left: calc(26 / 430 * 100vw);
+}
+
+.footer-links {
+    top: 140px;
+    left: calc(22 / 430 * 100vw);
+    width: auto;
+    padding: 4.555px calc(4.555 / 430 * 100vw);
+    gap: 3.644px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-pages {
+    width: auto;
+}
+
+.footer-pages-2 {
+    margin-top: 28.84px;
+}
+
+.footer-link {
+    width: 100%;
+    height: 21.862px;
+}
+
+.footer-link-2 {
+    top: 0;
+    gap: calc(4.55 / 430 * 100vw);
+}
+
+.footer-vector {
+    width: calc(4.099 / 430 * 100vw);
+    height: calc(2.277 / 430 * 100vw);
+}
+
+.footer-text-wrapper-2 {
+    color: #FFF;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(10.931 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    text-transform: uppercase;
+}
+
+.footer-social {
+    position: absolute;
+    top: 152px;
+    left: calc(217 / 430 * 100vw);
+    gap: 18.23px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-social span {
+    width: 100%;
+    height: calc(35.22 / 430* 100vw);
+}
+
+.footer-text-wrapper-3 {
+    color: #FFF;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(16 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+}
+
+.footer-social-media {
+    width: calc(35.22 / 430 * 100vw);
+    height: calc(35.22 / 430 * 100vw);
+}
+
+.footer-btn-a {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.footer-btn {
+    position: relative;
+    top: 261px;
+    left: calc(217 / 430 * 100vw);
+    padding: 9.226px calc(22.039 / 430 * 100vw);
+    border-radius: 7.688px;
+    box-shadow: 0px 1.025px 17.427px 3.075px rgba(31, 66, 131, 0.17);
+}
+
+.text-wrapper {
+    color: #1F4283;
+    text-align: right;
+    font-family: Gordita;
+    font-size: calc(12.814 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.513 / 430 * 100vw);
+}
+
+.footer-p {
+    position: absolute;
+    top: 484px;
+    left: calc(36 / 430 * 100vw);
+    color: #FFF;
+    font-family: Gordita;
+    font-size: calc(14 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.56 / 430 * 100vw);
+    opacity: 0.7;
+}
+/* footer End */
 
 /* Home End*/
 }
