--- a/css/responsive.css
+++ b/css/responsive.css
@@ -403,7 +403,7 @@ header {
     border-radius: 15px;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     background: linear-gradient(101deg, #FFF 3.27%, #B7D0FF 27.11%, #D9E6FD 75.74%);
 }
 .img-text2-content1-container2 img {
