--- a/css/responsive.css
+++ b/css/responsive.css
@@ -832,6 +832,7 @@ header {
     height: 68px;
     top: 35px;
     left: calc(163 / 430 * 100vw);
+    object-fit: contain;
 }
 
 .container4-content-div {
@@ -1158,6 +1159,14 @@ footer {
     line-height: normal;
     letter-spacing: calc(-0.56 / 430 * 100vw);
     opacity: 0.7;
+}
+
+.footer-fondo-bokeh-azul {
+    border-radius: 30px 30px 0 0;
+}
+
+.footer-overlap {
+    border-radius: 30px 30px 0 0;
 }
 /* footer End */
 
