--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1168,6 +1168,10 @@ footer {
 .footer-overlap {
     border-radius: 30px 30px 0 0;
 }
+
+.footer-glass {
+    border-radius: 30px 30px 0 0;
+}
 /* footer End */
 
 /* Home End*/
